Fixed "Add to cart" button color for dark mode + image placeholder

--- a/themes/zantic/assets/css/snippet-cart-button-2.css
+++ b/themes/zantic/assets/css/snippet-cart-button-2.css
@@ -25,6 +25,10 @@
   height: 36px;
 }
 
+.is-dark .snippet-product-card__image.image-placeholder .snippet-cart-button-2__container {
+  background-color: var(--backgroundAccentDark);
+}
+
 .snippet-cart-button-2__quick-checkout-container {
   flex: 1 0 auto;
   min-width: calc(50% - 0.25rem);
