--- a/themes/zantic/assets/css/snippet-product-cards.css
+++ b/themes/zantic/assets/css/snippet-product-cards.css
@@ -198,7 +198,7 @@
   }
   .snippet-product-card__card:hover .snippet-product-card__image img {
     filter: brightness(0.7);
-    
+
   }
 
   .snippet-product-card__card .snippet-product-card__image img {
@@ -246,6 +246,9 @@
   align-items: center;
   justify-content: center;
   border-radius: 50px;
+}
+.is-dark .snippet-product-card__image.image-placeholder .cart-button-animation-wrapper {
+  background: var(--backgroundAccentDark);
 }
 
 .cart-button-animation {
